fix(frontend/presenter): add max-width rule to prevent controller overshooting on mobile
Closes #270

--- a/app/frontend/src/Presenter/index.css
+++ b/app/frontend/src/Presenter/index.css
@@ -11,6 +11,7 @@
   bottom: 0;
   height: 273px;
   width: 416px;
+  max-width: 100%;
 }
 
 .presenter .controller-container .expand-icon {
